# excel_graph_parser

./: .gitignore  CHANGELOG.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  run-code-quality-tools.sh
.github/workflows/: main.yml
excel_graph_parser/: __init__.py  graph_parser.py  parser.py
tests/: spreadsheet.xlsx  test_parser.py
