[project]
name = "excel_graph_parser"
version = "0.1.8"
description = "Parser to translate excel graphs to Plotly figures"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "D. Sommers", email = "dsommers@viktor.ai" }
]
maintainers = [
    {name = "D. Sommers", email = "dsommers@viktor.ai" }
]
dependencies = [
    "viktor",
    "openpyxl",
    "plotly"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
]
[project.urls]
"Homepage" = "https://github.com/viktor-platform/excel_graph_parser"
"Bug Reports" = "https://github.com/viktor-platform/excel_graph_parser/issues"

[tool.setuptools]
packages = ["excel_graph_parser"]
package-data = {"excel_graph_parser" = ["*.jinja"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120
force_single_line = true
skip_glob = [".env"]

[tool.pylint.'MASTER']
max-line-length=120

[tool.pylint.'MESSAGES CONTROL']
disable=[
    'no-name-in-module',  # Suppresses E0611: No name 'XXX' in module 'viktor.YYY'
]