[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "excel_graph_parser"
version = "0.1.9"
description = "Parser to translate excel graphs to Plotly figures"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "VIKTOR", email = "support@viktor.ai" }
]
maintainers = [
    {name = "VIKTOR", email = "support@viktor.ai" }
]
dependencies = [
    "viktor",
    "openpyxl",
    "plotly"
]

[project.urls]
"Homepage" = "https://github.com/viktor-platform/excel_graph_parser"
"Bug Reports" = "https://github.com/viktor-platform/excel_graph_parser/issues"

[tool.setuptools]
packages = ["excel_graph_parser"]
